feat(bono): migracion Kotlin a Java y endpoints UI del bono
- DTOs de um.haberes.report.kotlin.dto.* reescritos como clases Java + Lombok bajo um.haberes.report.model.* (haberes y tesoreria), sin cambios en el contrato JSON
- Eliminados kotlin-stdlib, jackson-module-kotlin y kotlin-maven-plugin del build; actualizados imports en clients, services y controllers
- Nuevos endpoints frontend-only GET /ui/generatePdf y GET /ui/sendBono: generan/envian el bono sin registrar auditoria (la IP real la resuelve el core); el contrato legacy VB6 con {ipAddress} en el path permanece intacto
- Tool.generateFileInline (Content-Disposition: inline) y Tool.sanitizarNombreArchivo para el visor del browser
- e.printStackTrace() reemplazado por log en BonoService/SheetService; guards de null con Objects.requireNonNull y asserts; @RequiredArgsConstructor en AnotadorController y CargosClaseController
- Spring Boot 4.1.0 -> 4.1.1, Spring Cloud 2025.1.2 -> 2025.1.3, SpringDoc 3.0.3 -> 3.1.0; version del proyecto 0.4.0 -> 0.5.0
- README.md, CHANGELOG.md y banner.txt actualizados